# GraphicsEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CompileinVM.md  workspace.code-workspace
scripts/: additional_preprocessing.py
src/: main.cpp
src/camera/: camera.cpp  camera.h
src/ecs/component/: component.h  componentSystem.cpp  componentSystem.h
src/ecs/event/: event.cpp  event.h  eventManager.h
src/ecs/system/: system.cpp  system.h  systemManager.cpp  systemManager.h  systemTask.cpp  systemTask.h
src/gamelogic/: gamelogic.cpp  gamelogic.h
src/input/: input.cpp  input.h
src/light/: light.h
src/object/: object.cpp  object.h
src/renderer/: openglrenderer.cpp  openglrenderer.h
src/renderer/shadermanager/: openglshadermanager.cpp  openglshadermanager.h
src/renderer/shaders/: SimpleFragmentShader.vertexshader  SimpleVertexShader.vertexshader
src/renderer/shaders/light_shader/: LightFragmentShader.vertexshader  LightVertexShader.vertexshader
src/renderer/texturemanager/: opengltexturemanager.cpp  opengltexturemanager.h
src/renderer/vaomanager/: openglvaomanager.cpp  openglvaomanager.h
src/renderer/vulkan/: renderObjectComponent.h  renderSystem.cpp  renderSystem.h  renderTask.cpp  renderTask.h  vulkanrenderer.cpp  vulkanrenderer.h
src/renderer/vulkan/vulkan-pipeline/: vulkan-pipeline.cpp  vulkan-pipeline.h
src/renderer/vulkan/vulkan-shader/: vulkan-shader.cpp  vulkan-shader.h
src/renderer/vulkan/vulkan-texture/: vulkan-texture-manager.cpp  vulkan-texture-manager.h  vulkan-texture.cpp  vulkan-texture.h
src/renderer/vulkan/window/: baseWindow.h
src/renderer/vulkan/window/win32/: win32basetypes.h  win32window.cpp  win32window.h  win32windowSystem.cpp  win32windowSystem.h  win32windowTask.cpp  win32windowTask.h
src/shaders/: simplefragshader.frag  simplevertshader.vert
src/thread_communication/: threadcommunication.cpp  threadcommunication.h
src/utils/: objreader.cpp  objreader.h  pngloader.cpp  pngloader.h
